--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,47 @@ input{
     margin-left: 45%;
 }
 
+.table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
+.table th,
+.table td {
+    padding: 10px;
+    text-align: left;
+    border: 1px solid black;
+}
 
+.table th {
+    background-color: #f2f2f2;
+}
 
+.table_body tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.boton_editar {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.boton_borrar {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
