--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body{
     text-align: center;
     color: rgb(144, 147, 148);
 }
+.title_dentistas{
+    font-size: 2rem;
+}
 
 .div_titulo {
     justify-content:space-around ;
@@ -18,6 +21,7 @@ body{
     margin-left: 48vw;
 }
 
+
 h1{
     font-size: 3rem;
 }
@@ -25,6 +29,9 @@ h1{
 .home_nav{
     background-color: rgb(227, 231, 232);
     padding: 10px;
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+    margin-top: 1rem;
 }
 
 .home_nav ul{
@@ -59,6 +66,7 @@ h1{
 .foto_inicio{
     width: 50vw;
     height: 30vw;
+    margin-left: 2rem;
 } 
 
 .container_registro{
@@ -67,12 +75,21 @@ h1{
 }
 
 .formulario{
-    background-color: #f2f2f2;
+    background-color: rgb(227, 231, 232);
     border: 1px solid #ddd;
     padding: 20px;
     margin: 2rem;
     border-radius: 1rem;
     width: 50%;
+}
+
+.formulario_editar{
+    margin-left: 22vw;
+}
+
+.formulario_inicioSesion{
+    padding: 3rem;
+    padding-top: 7rem;
 }
 
 input{
@@ -98,19 +115,22 @@ input{
 }
 
 .table {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
+    border-radius: 5px;
+    margin-left: 10vw;
+    border: 1px solid black;
 }
 
 .table th,
 .table td {
     padding: 10px;
-    text-align: left;
-    border: 1px solid black;
+    text-align: center;
 }
 
 .table th {
     background-color: #f2f2f2;
+
 }
 
 .table_body tr:nth-child(even) {
@@ -129,6 +149,8 @@ input{
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
+    width: 3rem;
+
 }
 
 .boton_borrar {
@@ -140,4 +162,20 @@ input{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    border-radius: 5px;
+    width: 5.5rem;
+}
+
+.error-message{
+    color: red;
+    font-size: 1.3rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.exito-message{
+    color: green;
+    font-size: 1.3rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
