--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ input{
     cursor: pointer;
     border-radius: 5px;
     width: 3rem;
-
+    cursor: pointer;
 }
 
 .boton_borrar {
@@ -164,6 +164,7 @@ input{
     font-size: 16px;
     border-radius: 5px;
     width: 5.5rem;
+    cursor: pointer;
 }
 
 .error-message{
@@ -178,4 +179,9 @@ input{
     font-size: 1.3rem;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.volver{
+    margin-left: 49vw;
+    font-size: 1.3rem;
 }
